Fix | Secondary button hover error by z-index

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -17,6 +17,7 @@
 }
 
 .contacMeHeader {
+  z-index: 1;
   @media screen and (max-width: 768px) {
     display: flex;
     flex-direction: column;
