--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -100,7 +100,7 @@
   color: #66328e;
 }
 
-.buttonContainer {
+.buttonsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,6 +118,7 @@
   color: inherit;
   display: flex;
   align-items: center;
+  margin: 0 10px;
   @media screen and (max-width: 768px) {
     min-width: 100%;
   }
